# fastapi-example

./: main.py  pyproject.toml
app/: main.py
bruno/: opencollection.yml
bruno/environments/: dev.yml
bruno/posts/: create post.yml  delete post by id.yml  folder.yml  post by id.yml  posts.yml  root.yml  update post by id copy.yml
